# kerlossal

./: README.md  kerlossal.cabal  stack.yaml
data/: adverb.txt  aesthetic.txt  artist.txt  artwork.txt  artwork_non_rep.txt  bad_adj.txt  combining.txt  creates.txt  creates_into.txt  creates_outof.txt  creates_with.txt  factory.txt  fills.txt  footage.txt  footage_adj.txt  good_adj.txt  inrelation.txt  like.txt  magic_site.txt  measures.txt  medium.txt  nationality.txt  neutral_adj.txt  participle.txt  site.txt  sprouting.txt  structure.txt  substance.txt  thing.txt  things.txt  tidy_names.py  transform.txt  transforms.txt
src/: Main.hs
