name:                kerlossal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/spikelynch/kerlossal#readme
license:             BSD3
license-file:        LICENSE
author:              Mike Lynch
maintainer:          mike@mikelynch.org
copyright:           2017 Mike Lynch
category:            Twitter 
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kerlossal
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , text
                     , containers
                     , regex-posix
                     , directory
                     , random
                     , monad-loops
                     , blaze-markup
                     , titlecase
                     , textgen >= 0.1

source-repository head
  type:     git
  location: https://github.com/spikelynch/kerlossal
